@@ -1,3 +1,9 @@
+2008-11-09  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tkchat_whiteboard.tcl: Work around Vista problem displaying
+	safe-tk toplevel windows embedded directly into another toplevel
+	by embedding in a frame instead.
+
 2008-10-27  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* tkchat.tcl:       Catch dodgy errors from the TIP website.
